src/test/ui/macros/macro-backtrace-nested.stderr
error[E0425]: cannot find value `fake` in this scope
  --> $DIR/macro-backtrace-nested.rs:5:12
   |
LL |     () => (fake)
   |            ^^^^ not found in this scope
...
LL |     1 + call_nested_expr!();
   |         ------------------- in this macro invocation

error[E0425]: cannot find value `fake` in this scope
  --> $DIR/macro-backtrace-nested.rs:5:12
   |
LL |     () => (fake)
   |            ^^^^ not found in this scope
...
LL |     call_nested_expr_sum!();
   |     ------------------------ in this macro invocation

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
